--- a/src/layouts/mainLayout/components/Header/styles.module.css
+++ b/src/layouts/mainLayout/components/Header/styles.module.css
@@ -1,9 +1,9 @@
 .header {
-  max-width: 90%;
+  max-width: 1720px;
   margin: auto;
   display: flex;
   justify-content: space-between;
-  padding: 32px 0 34px 0;
+  padding: 32px 100px 34px 100px;
 }
 
 .headerLeft {
