--- a/src/layouts/mainLayout/components/Header/styles.module.css
+++ b/src/layouts/mainLayout/components/Header/styles.module.css
@@ -69,6 +69,12 @@
   background-color: transparent;
 }
 
+@media screen and (max-width: 1270px){
+  .header {
+    padding: 30px 20px;
+  }
+}
+
 @media screen and (max-width: 1150px) {
   .menuBtn {
     display: block;
