--- a/src/pages/CompanyInfo/components/Company/styles.module.css
+++ b/src/pages/CompanyInfo/components/Company/styles.module.css
@@ -2,6 +2,7 @@
   display: flex;
   gap: 15px;
   padding: 36px 24px;
+  margin-bottom: 100px;
   border-radius: 4px;
   border: 1px solid #E1E1E1;
 }
@@ -74,6 +75,7 @@
 @media screen and (max-width: 700px) {
   .company {
     flex-direction: column;
+    margin-bottom: 40px;
   }
   .companyTop{
     display: flex;
