--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,10 @@
   border: 0;
   outline: 0;
   box-sizing: border-box;
-  list-style: none;
   text-decoration: none;
+}
+ul {
+  list-style: none !important;
 }
 
 
