--- a/src/components/SearchProduct/styles.module.css
+++ b/src/components/SearchProduct/styles.module.css
@@ -18,12 +18,12 @@
     font-style: normal;
     font-weight: 500;
     line-height: 33px;
-  
+    margin-bottom: 34px;
 }
 .productName_input {
     width: 420px;
     border-radius: 6px;
-    border: 1px solid #121212;
+    border: 1px solid #DDD;
     background: #FFF;
     color: #121212;
     font-family: var(--font-family);
@@ -31,9 +31,10 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    padding: 22px 14px;
-    opacity: 0.3;
+    padding: 22px 22px;
+    /* opacity: 0.3; */
     margin-bottom: 20px;
+    width: 457px;
   }
 .productSearch_button {
     display: block;
@@ -57,4 +58,25 @@
     position: absolute;
     bottom: 0;
     right: 0;
+}
+.selectCategory {
+    border-radius: 6px;
+    /* border: 1px solid #DDD; */
+    background: #FFF;
+    padding: 22px 22px 26px 22px;
+    width: 436px;
+    color: #121212;
+    font-family: SF Pro Display;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+.selectCategory_box {
+    border-radius: 6px;
+    border: 1px solid #DDD;
+    background: #FFF;
+    padding-right: 22px;
+    width: 455px;
+    margin-bottom: 8px;
 }
