--- a/src/layouts/mainLayout/components/Header/styles.module.css
+++ b/src/layouts/mainLayout/components/Header/styles.module.css
@@ -1,18 +1,18 @@
 .header {
-  max-width: 1720px;
+  max-width: 1320px;
   margin: auto;
   display: flex;
   justify-content: space-between;
-  padding: 32px 100px 34px 100px;
+  padding: 32px 0 34px 0;
 }
 
 .headerLeft {
   max-width: 815px;
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-size: 18px;
+  gap: 50px;
 }
 
 
