--- a/src/pages/Producers/components/CompanyPages/style.module.css
+++ b/src/pages/Producers/components/CompanyPages/style.module.css
@@ -2,6 +2,7 @@
     display: flex;
     margin-bottom: 150px;
     margin-left: 10px;
+    margin-top: 56px;
 }
 .pagesBtn1 {
     background: #1876F2;
