--- a/src/components/CreateCompany/styles.module.css
+++ b/src/components/CreateCompany/styles.module.css
@@ -1,6 +1,6 @@
 .productSearchCard {
     position: relative;
-    max-width: 608px;
+    width: 600px;
     padding: 71px 89px 117px 65px;
     background: #F3F6F8;
     border-radius: 6px;
@@ -55,13 +55,14 @@
     margin-bottom: 45px;
     cursor: pointer;
   }
-  @media screen and (max-width: 1536px) {
-    .productSearch_button {
-      margin-bottom: 65px;
-    }
-  }
   .search_boxImage {
     position: absolute;
     bottom: 0;
     right: 0;
   }
+
+@media screen and (max-width: 820px) {
+  .productSearchCard {
+    width: 728px;
+  }
+}
