--- a/src/components/RequestForm/styles.module.css
+++ b/src/components/RequestForm/styles.module.css
@@ -51,3 +51,9 @@
     line-height: 20px;
     display: block;
   }
+
+@media screen and (max-width: 820px) {
+  .contactForm_btn {
+    width: 400px;
+  }
+}
