--- a/src/components/SearchProduct/styles.module.css
+++ b/src/components/SearchProduct/styles.module.css
@@ -5,7 +5,7 @@
   }
   .productSearchCard {
     position: relative;
-    max-width: 608px;
+    width: 600px;
     padding: 71px 89px 117px 65px;
     background: #F3F6F8;
     border-radius: 6px;
@@ -21,7 +21,6 @@
     margin-bottom: 34px;
 }
 .productName_input {
-    width: 420px;
     border-radius: 6px;
     border: 1px solid #DDD;
     background: #FFF;
@@ -31,8 +30,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    padding: 22px 22px;
-    /* opacity: 0.3; */
+    padding: 22px;
     margin-bottom: 20px;
     width: 457px;
   }
@@ -62,7 +60,6 @@
 }
 .selectCategory {
     border-radius: 6px;
-    /* border: 1px solid #DDD; */
     background: #FFF;
     padding: 22px 22px 26px 22px;
     width: 436px;
@@ -78,6 +75,12 @@
     border: 1px solid #DDD;
     background: #FFF;
     padding-right: 22px;
-    width: 455px;
+    width: 446px;
     margin-bottom: 8px;
+}
+@media screen and (max-width: 820px) {
+    .productSearchCard {
+        width: 728px;
+        
+    }
 }
