--- a/src/layouts/mainLayout/components/Footer/styles.module.css
+++ b/src/layouts/mainLayout/components/Footer/styles.module.css
@@ -92,3 +92,17 @@
     gap: 50px
   }
 }
+@media screen and (max-width: 820px) {
+  .footerSocial_icon {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    width: 180px;
+    padding: 27px 56px 26px 26px;
+  }
+  .footerContent {
+    /* justify-content: center; */
+    /* gap: 150; */
+    flex-wrap: wrap;
+  }
+}
