--- a/src/pages/Home/components/About/styles.module.css
+++ b/src/pages/Home/components/About/styles.module.css
@@ -6,7 +6,6 @@
   display: flex;
   justify-content: space-between;
   padding-top: 23px;
-
 }
 .aboutContent {
   padding-top: 70px;
@@ -20,11 +19,22 @@
   margin-bottom: 24px;
 }
 .aboutText {
-  width: 625px;
+  max-width: 625px;
   color: #000;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 38px;
   opacity: 0.8;
+}
+
+@media screen and (max-width: 800px) {
+  .aboutContainer {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
+  .aboutContent {
+    margin-bottom: 59px;
+  }
 }
