--- a/src/pages/Home/components/NewProduct/styles.module.css
+++ b/src/pages/Home/components/NewProduct/styles.module.css
@@ -73,3 +73,16 @@
 .arrowIcon_right:hover {
   cursor: pointer;
 }
+.productCards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+@media screen and (max-width: 820px) {
+  .newProductContainer {
+    text-align: center;
+  }
+  .productCards {
+    justify-content: center;
+  }
+}
