--- a/src/components/RequestForm/styles.module.css
+++ b/src/components/RequestForm/styles.module.css
@@ -57,3 +57,14 @@
     width: 400px;
   }
 }
+@media screen and (max-width: 500px) {
+  .contactForm_name_input {
+    width: 355px;
+  }
+  .contactForm_textarea {
+    width: 355px;
+  }
+  .contactForm_btn {
+    width: 355px;
+  }
+}
