--- a/src/pages/Home/components/Trust/styles.module.css
+++ b/src/pages/Home/components/Trust/styles.module.css
@@ -25,3 +25,17 @@
     padding: 22px 39px;
   }
 }
+@media screen and (max-width: 500px) {
+  .trustContainer {
+    padding-top: 100px;
+    padding-bottom: 93px;
+  }
+  .trustTitle {
+    font-size: 32px;
+  }
+}
+@media screen and (max-width: 395px) {
+  .aboutImages {
+    justify-content: center;
+  }
+}
