--- a/src/components/CreateCompany/styles.module.css
+++ b/src/components/CreateCompany/styles.module.css
@@ -66,3 +66,22 @@
     width: 728px;
   }
 }
+@media screen and (max-width: 500px) {
+  .productSearchCard {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    max-width: 355px;
+    padding: 71px 8px 117px 8px;
+  }
+  .addCompany_title {
+    text-align: center;
+  }
+  .addCompany_item2 {
+    margin-bottom: 120px;
+  }
+  .search_boxImage {
+    right: -40px;
+  }
+}
