--- a/src/components/SearchProduct/styles.module.css
+++ b/src/components/SearchProduct/styles.module.css
@@ -35,15 +35,14 @@
     width: 457px;
   }
 .productSearch_button {
-    display: block;
-    color: #FFF;
-    font-family: var(--font-family);
+    color: #121212;
+    font-family: SF Pro Display;
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
     line-height: 20px;
     border-radius: 6px;
-    background: #1876F2;
+    background: #FFF;
     padding: 20px 30px;
     margin-bottom: 45px;
     cursor: pointer;
@@ -81,6 +80,34 @@
 @media screen and (max-width: 820px) {
     .productSearchCard {
         width: 728px;
-        
+    }
+}
+@media screen and (max-width: 500px) {
+    .productSearch_title {
+        text-align: center;
+        max-width: 285px;
+    }
+    .productSearchCard {
+        width: 355px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 71px 8px 117px 8px;
+    }
+    .selectCategory_box {
+        width: 339px;
+    }
+    .selectCategory {
+        width: 339px;
+    }
+    .productSearch_inputs {
+        align-items: center;
+        justify-content: center;
+    }
+    .productName_input {
+        width: 339px;
+    }
+    .productSearch_button {
+        width: 339px;
     }
 }
