--- a/src/pages/Home/components/Contact/styles.module.css
+++ b/src/pages/Home/components/Contact/styles.module.css
@@ -33,7 +33,7 @@
   display: flex;
   justify-content: space-between;
   max-width: 173px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   gap: 31px;
 }
 
@@ -84,5 +84,24 @@
   }
   .contactForm {
     padding-right: 0;
+  }
+}
+@media screen and (max-width: 500px) {
+  .contactTitle {
+    max-width: 346px;
+  }
+  .contactLocation {
+    max-width: 328px;
+  }
+  .contactForm_title {
+    max-width: 346px;
+  }
+  .contactForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .contactMap {
+    width: 355px;
   }
 }
