--- a/src/pages/Home/components/FAQHome/styles.module.css
+++ b/src/pages/Home/components/FAQHome/styles.module.css
@@ -7,7 +7,7 @@
     line-height: normal;
 }
 @media screen and (max-width: 820px) {
-    .faqHome {
+    .title {
         text-align: center;
     }
 }
