--- a/src/pages/Home/components/WhyMadeInKokand/styles.module.css
+++ b/src/pages/Home/components/WhyMadeInKokand/styles.module.css
@@ -10,7 +10,16 @@
   line-height: normal;
   margin-bottom: 65px;
 }
-
+.whyText {
+  color: #121212;
+  text-align: center;
+  font-family: SF Pro Display;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-top: 8px;
+}
 .whyContent {
   display: flex;
   justify-content: space-between;
@@ -28,5 +37,23 @@
   .whyContent {
     row-gap: 90px;
     flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 500px) {
+  .whyContainer {
+    padding-top: 70px;
+    padding-bottom: 56px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+  }
+  .whyTitle {
+    margin-bottom: 84px;
+    max-width: 318px;
+  }
+  .whyContent {
+    justify-content: center;
+    margin-bottom: 0;
   }
 }
