--- a/src/components/CompanyCard/style.module.css
+++ b/src/components/CompanyCard/style.module.css
@@ -23,10 +23,11 @@
     opacity: 0.3;
 }
 .companyCard {
-    max-width: 397px;
+    width: 390px;
     border-radius: 4px;
     border: 1px solid #E1E1E1;
     padding: 36px 37px 43px 24px;
+    cursor: pointer;
 }
 .companyCard:hover{
     box-shadow: 24px 0px 74px 0px rgba(137, 137, 161, 0.17);
@@ -77,3 +78,8 @@
     margin-right: 10px;
 }
 
+@media screen and (max-width: 1150px) {
+    .companyCard {
+        width: 354px;
+    }
+}
