--- a/src/pages/Producers/components/CompanyPages/style.module.css
+++ b/src/pages/Producers/components/CompanyPages/style.module.css
@@ -1,6 +1,5 @@
 .pagesButtons {
     display: flex;
-    margin-bottom: 150px;
     margin-left: 10px;
     margin-top: 56px;
 }
@@ -33,4 +32,9 @@
     background: #FFF;
     padding: 9px 15px 10px 15px;
     align-items: center;
+}
+@media screen and (max-width: 1150px) {
+    .pagesButtons {
+        display: none;
+    }
 }
