--- a/src/pages/Producers/components/Filter/styles.module.css
+++ b/src/pages/Producers/components/Filter/styles.module.css
@@ -145,3 +145,51 @@
 .ratingFilter {
     display: flex;
 }
+.filterGroup {
+    display: flex;
+    border-radius: 4px;
+    border: 1px solid #DDD;
+    width: 354px;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+    gap: 6px;
+}   
+.filterGroup_box {
+    position: absolute;
+    z-index: 2;
+}
+
+@media screen and (max-width: 1150px) {
+    .checkbox_box {
+        display: none;
+    }
+    .companyPlace_box {
+        display: none;
+    }
+    .companyRating_box {
+        display: none;
+    }
+    .filterButton {
+        display: none;
+    }
+    .searchInput_box {
+        width: 354px;
+    }
+    .filterContainer {
+        justify-content: center;
+        gap: 20px;
+    }
+}
+@media screen and (min-width: 1151px) {
+    .filterGroup_container {
+        display: none;
+    }
+}
+@media screen and (max-width: 640px) {
+    .filterContainer {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+}
