--- a/src/pages/Home/components/HeroForm/styles.module.css
+++ b/src/pages/Home/components/HeroForm/styles.module.css
@@ -72,12 +72,15 @@
 }
 @media screen and (max-width: 340px) {
   .formClient_name {
-    width: 300px;
+    width: 290px;
   }
   .formClient_name {
-    width: 300px;
+    width: 290px;
   }
   .heroForm_button {
-    width: 300px;
+    width: 290px;
+  }
+  .formContainer {
+    padding: 50px 10px;
   }
 }
