--- a/src/pages/Home/components/Useful/styles.module.css
+++ b/src/pages/Home/components/Useful/styles.module.css
@@ -48,3 +48,11 @@
     width: 355px;
   }
 }
+@media screen and (max-width: 370px) {
+  .usefulBox {
+    width: 310px;
+  }
+  .usefulButton {
+    width: 300px;
+  }
+} 
