--- a/src/pages/Producers/components/Filter/styles.module.css
+++ b/src/pages/Producers/components/Filter/styles.module.css
@@ -109,6 +109,7 @@
     padding: 26px 20px 40px 16px;
     gap: 28px;
     margin-top: 9px;
+    z-index: 2;
 }
 .placeCheckboxes {
     position: absolute;
@@ -121,6 +122,7 @@
     gap: 28px;
     margin-top: 9px;
     width: 257px;  
+    z-index: 2;
 }
 .ratingCheckboxes {
     position: absolute;
@@ -133,6 +135,7 @@
     gap: 28px;
     margin-top: 9px;
     width: 217px; 
+    z-index: 2;
 }
 .filterName {
     color: #121212;
