--- a/src/pages/Product/components/Products/styles.module.css
+++ b/src/pages/Product/components/Products/styles.module.css
@@ -20,3 +20,30 @@
     margin-left: 20px;
     gap: 15px;
 }
+@media screen and (max-width: 1150px) {
+    .productsContainer {
+        justify-content: center;
+        margin-left: 0;
+        gap: 20px;
+    }
+    
+}
+@media screen and (max-width: 1000px) {
+    .productsCard {
+        width: 355px;
+    }
+    .productImage {
+        width: 355px;
+    }
+}
+@media screen and (max-width: 580px) {
+    .productsCard {
+        width: 174px;
+    }
+    .productImage {
+        width: 174px;
+    }
+    .productsContainer {
+        gap: 8px;
+    }
+}
