--- a/src/pages/Product/components/Sort/style.module.css
+++ b/src/pages/Product/components/Sort/style.module.css
@@ -2,7 +2,7 @@
     border-radius: 4px;
     border: 1px solid #EEE;
     padding: 35px 56px 34px 20px;
-    max-width: 292px;
+    width: 292px;
 }
 .sortTitle {
     color: #1F1914;
@@ -13,12 +13,38 @@
     line-height: 24px;
     margin-bottom: 31px;
 }
-.sortName {
-    color: #0F2E4A;
+.closeButton {
+    display: flex;
+    gap: 5px;
+    cursor: pointer;
+    padding-top: 16px;
+}
+.clearFilter {
+    color: #F00;
     font-family: SF Pro Display;
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
-    line-height: normal;
-    margin-bottom: 18px;
+    line-height: 20px;
+}
+@media screen and (max-width: 1150px) {
+    .checkboxes {
+        display: none;
+    }
+    .closeButton {
+        display: none;
+    }
+    .sortBox {
+        width: 354px;
+        padding: 20px;
+        text-align: center;
+    }
+    .sortTitle {
+        margin-bottom: 0;
+    }
+}
+@media screen and (max-width: 370px) {
+    .sortBox {
+        width: 310px;
+    }
 }
