--- a/src/pages/Product/styles.module.css
+++ b/src/pages/Product/styles.module.css
@@ -3,3 +3,20 @@
     padding-top: 46px;
     padding-bottom: 100px;
 }
+@media screen and (max-width: 1150px) {
+    .filterBlock {
+        flex-direction: column;
+    }
+    .filterbox {
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 56px;
+    }
+}
+@media screen and (max-width: 670px) {
+    .filterbox {
+        flex-direction: column;
+    }
+}
