--- a/src/pages/ProductInfo/CompanyContact/CallPopUp/styles.module.css
+++ b/src/pages/ProductInfo/CompanyContact/CallPopUp/styles.module.css
@@ -48,3 +48,10 @@
     margin-left: 152px;
     margin-right: 20px;
 }
+@media screen and (max-width: 1150px) {
+    .popUpContainer {
+        max-width: 728px;
+        left: 20px;
+
+    }
+}
