--- a/src/pages/ProductInfo/CompanyContact/styles.module.css
+++ b/src/pages/ProductInfo/CompanyContact/styles.module.css
@@ -70,3 +70,8 @@
     display: flex;
     align-items: center;
 }
+@media screen and (max-width: 1150px) {
+    .companyContact {
+        width: 728px;
+    }
+}
