--- a/src/pages/ProductInfo/ProductDeatails/styles.module.css
+++ b/src/pages/ProductInfo/ProductDeatails/styles.module.css
@@ -52,3 +52,8 @@
     line-height: normal;
     cursor: pointer;
 }
+@media screen and (max-width: 1150px) {
+    .productData {
+        margin-left: 0;
+    }
+}
