--- a/src/pages/About/styles.module.css
+++ b/src/pages/About/styles.module.css
@@ -42,3 +42,49 @@
     justify-content: space-between;
     margin-bottom: 24px;
 }
+
+@media screen and (max-width: 1150px) {
+    .aboutMain {
+        flex-direction: column-reverse;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+    .aboutImage {
+        width: 728px;
+    }
+    .about {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+    }
+    .logo {
+        margin-left: 0;
+    }
+    .productSearch {
+        flex-direction: column;
+        width: 728px;
+        gap: 20px;
+    }
+    .aboutContent {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 66px;
+        width: 355px;
+    }
+    .aboutImage {
+        width: 355px;
+    }
+}
+@media screen and (max-width: 740px) {
+    .aboutTitle {
+        font-size: 32px;
+        width: 355px;
+    }
+    .productSearch {
+        align-items: center;
+    }
+}
