--- a/src/pages/ProductInfo/CompanyContact/CallPopUp/styles.module.css
+++ b/src/pages/ProductInfo/CompanyContact/CallPopUp/styles.module.css
@@ -55,3 +55,13 @@
 
     }
 }
+@media screen and (max-width: 740px) {
+    .popUpContainer {
+        flex-direction: column;
+        max-width: 355px;
+        left: 10px;
+    }
+    .popUpImage {
+        margin-left: 0;
+    }
+}
