--- a/src/pages/Aplication/styles.module.css
+++ b/src/pages/Aplication/styles.module.css
@@ -3,6 +3,7 @@
     padding-bottom: 250px;
     display: flex;
     position: relative;
+    justify-content: space-around;
 }
 .applicationForm {
     display: flex;
