--- a/src/pages/Home/components/ProductCategory/styles.module.css
+++ b/src/pages/Home/components/ProductCategory/styles.module.css
@@ -28,8 +28,14 @@
   background-image: url(@assets/images/tshirtsmallRound.png);
   border-radius: 50%;
   margin-bottom: 18px;
-
 }
+.productImage2_bg img {
+  width: 70px;
+  height: 70px;
+  object-fit: cover;
+  object-position: center center;
+}
+
 .productCategory_box {
   display: flex;
   flex-wrap: wrap;  
