--- a/src/pages/Home/components/ProductCategory/styles.module.css
+++ b/src/pages/Home/components/ProductCategory/styles.module.css
@@ -95,6 +95,9 @@
   .productCategory_card {
     margin-bottom: 0;
   }
+  .productCategory_title {
+    width: 310px;
+  }
 }
 @media screen and (max-width: 370px) {
   .productCategory_title {
