--- a/src/pages/HowToBuyProduct/styles.module.css
+++ b/src/pages/HowToBuyProduct/styles.module.css
@@ -133,3 +133,13 @@
     margin-bottom: 24px;
   }
 }
+@media screen and (max-width: 500px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .wrapper {
+    margin-top: 97px;
+  }
+}
