--- a/src/layouts/mainLayout/components/Header/styles.module.css
+++ b/src/layouts/mainLayout/components/Header/styles.module.css
@@ -4,6 +4,18 @@
   display: flex;
   justify-content: space-between;
   padding: 32px 0 34px 0;
+  position: relative;
+  z-index: 1000;
+  background-color: #FFFFFF;
+}
+
+.headerWrapper {
+  position: fixed;
+  width: 100%;
+  background-color: #FFFFFF;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
 
 .headerLeft {
