--- a/src/components/CountrySelect/styles.module.css
+++ b/src/components/CountrySelect/styles.module.css
@@ -8,6 +8,10 @@
     color: #000;
     font-family: var(--font-family);
     margin-bottom: 12px;
+    background-color: #fff;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
   }
   @media screen and (max-width: 500px) {
     .countrySelect {
